--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -63,6 +63,12 @@ body {
     gap: 20px;
 }
 
+.form-container form .inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 .form-set {
     display: flex;
     flex-direction: column;
@@ -90,15 +96,11 @@ body {
     outline: 0;
 }
 
-.form-set:last-child {
-    margin-top: 30px;
-}
-
 .form-set button {
     font-size: 20px;
     font-weight: 500;
     font-family: 'Fredoka';
-    color: white;
+    color: white; 
     background-image: linear-gradient(90deg, #7b6fff 0%, #6224ff 100%);
     border: none;
     border-radius: 50px;
@@ -210,4 +212,31 @@ footer {
     height: 35px;
     border-radius: 100%;
     transition: transform 1s ease-in-out;
+}
+
+.error_input_value input,
+.error_input_value select {
+    border-color: red;
+    color: rgb(214, 106, 106);
+    text-decoration: underline;
+}
+
+.error_input_value label {
+    color: red;
+}
+
+#output_info {
+    position: relative;
+    bottom: 10px;
+    text-align: center;
+    font-weight: 600;
+    color: red;
+    font-size: 0.9em;
+    user-select: none;
+    text-shadow: 1px 1px 2px lightgray;
+    visibility: hidden;
+}
+
+#output_info strong {
+    text-decoration: underline;
 }
